# better-clipboard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  manual_test_report.md
.github/workflows/: ci.yml
docs/: help.md  manual-test-script.md  release-plan.md
scripts/: build-macos-app.sh
src/: main.rs
